# plumbbagel

./: .gitignore  README.md  pyproject.toml  sample.pbgl
artifacts/docs/: plumb.1.md  plumber.4.md
artifacts/rules/: plumb.rules  rules.json
devlog/: 2025-07-29.md
plan/: phase3.md  phase4.md
plumbbagel/: __init__.py  __main__.py  cli.py  engine.py  message.py  parser.py  plumbaggage.py  plumbtest.py  rules.py
scripts/: fishtest.py
tests/: test_plumbtest.py  test_rules.py
tests/messages/: bye.txt  hello.txt
